<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">GioLightUpd</string>
    <string name="vote">Отзыв</string>
    <string name="about">Инфо</string>
    <string name="alasecond">Автор приложения Ikeagold\nАвтор прошивки ZimniY\nДля 4pda.ru</string>
    <string name="close">Закрыть</string>
    <string name="update_label">Проверить</string>
    <string name="alert_label">Важно</string>
    <string name="install_label">Установка</string>
    <string name="info_label">Описание</string>
    <string name="label"></string>
    <string name="note">\nУстановленная версия:\n</string>
    <string name="download">Скачать</string>
    <string name="divider"></string>
    <string name="pref_label">Настройки</string>
    <string name="pref_title">Общие</string>
    <string name="pref_upd_title">Проверять обновления</string>
    <string name="pref_upd_summary">При старте GioLightUpd</string>
    <string name="pref_test_title">Тестовые версии</string>
    <string name="pref_download_title">Внешняя загрузка</string>
    <string name="pref_sync_title">Фоновые обновления</string>
    <string name="alert_text">Важно:\n\n
		- Без CWM (минимально 2.3 Android) данную прошивку использовать нельзя.\n\n
		- Файловая система по-умолчанию ext4 - переход на другую прошивку возможен только после многофайловой прошивки через Odin. http://goo.gl/Xktpz \n\n
		- *zip архивы прошивок размером ~95мб.\n\n\n
		Сайт: http://goo.gl/qWS5m	</string>
    <string name="install_text">Порядок установки:\n\n
		Для корректной установки и работы ROM необходимо скачать и прошить CWM http://goo.gl/nqh5W , либо - поставить ROM 2 раза подряд - если у Вас стоковая прошивка без CWM (когда установщик в первый раз прошьёт часть файлов - boot.img и recovery.img и ругнётся на невозможность дальнейшей установки - ещё раз перезагрузиться в рекавери и повторить процесс)\n\n
		Снимаем полный бэкап в CWM, чтобы (если вдруг захочется) откатиться обратно\n\n
		Качаем нужный ROM\n\n
		Тем, кто хочет установить ROM впервые, необходимо прошить baseband для нужной версии Android. http://goo.gl/UWDK9\n\n
		Закидываем ROM на флешку\n\n
		Выбираем "install zip from sdcard", находим и устанавливаем ROM\n\n
		ROM обрабатывает найденные на карте в папке gio4pda пакеты http://goo.gl/ljSZk , и перезагружается для их установки (при отсутствии пакетов - перезагрузитесь вручную).	</string>
    <string name="info_text">Особенности данной прошивки:\n\n
		BOOT:\n\n
		px-kernel - последний для Gio.
		Разгон (122-1035 МГц) - 787 по-умолчанию\n
		Поддержка init-скриптов + патчи для производительности\n
		Поддержка TMP для linux-приложений\n
		Оригинал собран phiexz.\n\n
		RECOVERY:\n\n
		PX recovery 0.3.6 beta (на основе CWM)
		\n\n
		До 47й версии - ClockWorkMod recovery 5.0.2.6 (ext4 на всех разделах) and ZimniY (корректировка fstab: опции монтирования разделов)\n
		Оригинал собран hyriand из исходников ClockWorkMod.\n\n
		ROM:\n\n
		Root (Superuser 3 с новым интерфейсом)\n
		bash вместо sh (линуксоиды поймут)\n
		busybox (с нужными симлинками)\n
		Поддержка TERMINFO для linux-приложений\n
		CWM для удобного накатывания обновлений и работы с recovery\n\n
		патчи для производительности\n
		Удалены бесполезные программы: DualClock, Forest, etc\n\n
		Оставшиеся пункты меню:\n\n
		Календарь\n
		Музыка\n
		Камера\n
		Галерея\n
		FM-Радио\n
		Интернет\n
		Маркет\n
		Поиск\n
		(Настройки)\n
		Google Talk\n
		Голосовой поиск\n
		Диктофон\n
		Диспетчер задач\n
		Загрузки\n
		CWM\n
		SIM ToolKit (зависит от оператора)\n
		Superuser\n	</string>
	
</resources>