<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_title">
		<CheckBoxPreference android:defaultValue="false"
			android:key="updkey" android:summary="@string/pref_upd_summary"
			android:title="@string/pref_upd_title" />
		<CheckBoxPreference android:defaultValue="false"
			android:key="testkey" android:title="@string/pref_test_title" />
		<CheckBoxPreference android:defaultValue="false"
			android:key="downloadkey" android:title="@string/pref_download_title" />
		<CheckBoxPreference android:defaultValue="false"
			android:key="prefNotifications" android:title="@string/pref_sync_title" />
		<EditTextPreference android:defaultValue="1"
			android:dependency="prefNotifications" android:key="timekey"
			android:numeric="integer" android:summary="Кол-во часов"
			android:title="Интервал проверки" />
	</PreferenceCategory>
</PreferenceScreen>