<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingBottom="5dip"
	android:paddingLeft="15dip" android:paddingRight="15dip"
	android:paddingTop="5dip">

	<TextView android:id="@+id/textView9" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:text="@string/note"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button android:id="@+id/button4" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_margin="1dp"
		android:onClick="button4_Click" android:text="@string/update_label"
		android:textStyle="bold" />

	<ImageView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:contentDescription="@string/divider"
		android:paddingBottom="1dp" android:paddingTop="17dp"
		android:scaleType="fitXY" android:src="@android:drawable/divider_horizontal_dark" />

	<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="" />

	<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/label"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button android:id="@+id/button5" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_margin="1dp"
		android:onClick="button5_Click" android:text="@string/download" />

</LinearLayout>